Add getAllContactIDs method, and update the Javadocs